force-app/main/default/objects/Service_Request__c/fields/AMC_Status__c.field-meta.xml
<CustomField>
    <fullName>AMC_Status__c</fullName>
    <formula>Text(ESN__r.Under_AMC__c)</formula>
    <label>AMC Status</label>
    <type>Text</type>
</CustomField>