force-app/main/default/objects/Service_Request__c/fields/Amps__c.field-meta.xml
<CustomField>
    <fullName>Amps__c</fullName>
    <label>Amps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>