force-app/main/default/objects/Service_Request__c/fields/Asset_Location__c.field-meta.xml
<CustomField>
    <fullName>Asset_Location__c</fullName>
    <formula>ESN__r.Site_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Location</label>
    <type>Text</type>
</CustomField>