force-app/main/default/objects/Service_Request__c/fields/Attended_By__c.field-meta.xml
<CustomField>
    <fullName>Attended_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attended By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>