force-app/main/default/objects/Service_Request__c/fields/Battery_Electrolyte__c.field-meta.xml
<CustomField>
    <fullName>Battery_Electrolyte__c</fullName>
    <label>Battery Electrolyte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>