force-app/main/default/objects/Service_Request__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Service Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMC</fullName>
            </value>
            <value>
                <fullName>Application SignOff</fullName>
            </value>
            <value>
                <fullName>Campaign/PIP</fullName>
            </value>
            <value>
                <fullName>FOC</fullName>
            </value>
            <value>
                <fullName>PAID</fullName>
            </value>
            <value>
                <fullName>WAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>