force-app/main/default/objects/Service_Request__c/fields/Category_Update__c.field-meta.xml
<CustomField>
    <fullName>Category_Update__c</fullName>
    <label>Category Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>