force-app/main/default/objects/Service_Request__c/fields/Check_Confirm_All_Safety_Wired_Up__c.field-meta.xml
<CustomField>
    <fullName>Check_Confirm_All_Safety_Wired_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check &amp; Confirm All Safety Wired Up</label>
    <type>Checkbox</type>
</CustomField>