force-app/main/default/objects/Service_Request__c/fields/Complaint_Description__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Description__c</fullName>
    <label>Complaint Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>