force-app/main/default/objects/Service_Request__c/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakdown</fullName>
            </value>
            <value>
                <fullName>Running with Problem</fullName>
            </value>
            <value>
                <fullName>Planned Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>