force-app/main/default/objects/Service_Request__c/fields/Contact_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Person Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>