force-app/main/default/objects/Service_Request__c/fields/Coolant_Level__c.field-meta.xml
<CustomField>
    <fullName>Coolant_Level__c</fullName>
    <label>Coolant Make/Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>