force-app/main/default/objects/Service_Request__c/fields/Coolant_Sampling__c.field-meta.xml
<CustomField>
    <fullName>Coolant_Sampling__c</fullName>
    <label>Coolant Sampling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>