force-app/main/default/objects/Service_Request__c/fields/Coolant_Temp__c.field-meta.xml
<CustomField>
    <fullName>Coolant_Temp__c</fullName>
    <label>Coolant Temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>