force-app/main/default/objects/Service_Request__c/fields/Customer_Comment_Added_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comment_Added_By_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Comment Added By Customer</label>
    <type>Checkbox</type>
</CustomField>