force-app/main/default/objects/Service_Request__c/fields/Customer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comments__c</fullName>
    <label>Customer Comments</label>
    <type>TextArea</type>
</CustomField>