force-app/main/default/objects/Service_Request__c/fields/Customer_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Customer_Complaint__c</fullName>
    <label>Customer Complaint</label>
    <type>TextArea</type>
</CustomField>