force-app/main/default/objects/Service_Request__c/fields/Customer_Details__c.field-meta.xml
<CustomField>
    <fullName>Customer_Details__c</fullName>
    <label>Customer Details</label>
    <type>TextArea</type>
</CustomField>