force-app/main/default/objects/Service_Request__c/fields/Date_Attended__c.field-meta.xml
<CustomField>
    <fullName>Date_Attended__c</fullName>
    <formula>DATEVALUE( Visit_ReportedTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Attended</label>
    <type>Date</type>
</CustomField>