force-app/main/default/objects/Service_Request__c/fields/Date_Of_Commissioning__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Commissioning__c</fullName>
    <formula>ESN__r.Date_Of_Commissioning__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Of Commissioning</label>
    <type>Date</type>
</CustomField>