force-app/main/default/objects/Service_Request__c/fields/Date_Reported__c.field-meta.xml
<CustomField>
    <fullName>Date_Reported__c</fullName>
    <formula>DATEVALUE(Date_Time_Reported__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Reported</label>
    <type>Date</type>
</CustomField>