force-app/main/default/objects/Service_Request__c/fields/Date_Time_Attended__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Attended__c</fullName>
    <label>Date Time Attended</label>
    <type>DateTime</type>
</CustomField>