force-app/main/default/objects/Service_Request__c/fields/Date_Time_Reported__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Reported__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date Time Reported</label>
    <type>DateTime</type>
</CustomField>