force-app/main/default/objects/Service_Request__c/fields/DateTimeCalculation__c.field-meta.xml
<CustomField>
    <fullName>DateTimeCalculation__c</fullName>
    <label>On Hold DateTime</label>
    <type>DateTime</type>
</CustomField>