force-app/main/default/objects/Service_Request__c/fields/Depute_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Depute_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depute Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>