force-app/main/default/objects/Service_Request__c/fields/Download_EST_PSR_Report__c.field-meta.xml
<CustomField>
    <fullName>Download_EST_PSR_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Download EST PSR Report</label>
    <type>Checkbox</type>
</CustomField>