force-app/main/default/objects/Service_Request__c/fields/Download_Pandaros_Data__c.field-meta.xml
<CustomField>
    <fullName>Download_Pandaros_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Download Pandaros Data</label>
    <type>Checkbox</type>
</CustomField>