force-app/main/default/objects/Service_Request__c/fields/Engine_Cleanliness__c.field-meta.xml
<CustomField>
    <fullName>Engine_Cleanliness__c</fullName>
    <label>Engine Cleanliness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>