force-app/main/default/objects/Service_Request__c/fields/Engine_Model__c.field-meta.xml
<CustomField>
    <fullName>Engine_Model__c</fullName>
    <formula>text(ESN__r.Engine_Model__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engine Model</label>
    <type>Text</type>
</CustomField>