force-app/main/default/objects/Service_Request__c/fields/Engine_Run_Hours__c.field-meta.xml
<CustomField>
    <fullName>Engine_Run_Hours__c</fullName>
    <label>Engine Run Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>