force-app/main/default/objects/Service_Request__c/fields/Engineer_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Recommendation__c</fullName>
    <label>Engineer Recommendation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>