force-app/main/default/objects/Service_Request__c/fields/ESN__c.field-meta.xml
<CustomField>
    <fullName>ESN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ESN</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>