force-app/main/default/objects/Service_Request__c/fields/Failed_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Failed_Part_Number__c</fullName>
    <label>Causal Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>