force-app/main/default/objects/Service_Request__c/fields/Failed_Parts_Name__c.field-meta.xml
<CustomField>
    <fullName>Failed_Parts_Name__c</fullName>
    <label>Causal Parts Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>