force-app/main/default/objects/Service_Request__c/fields/Failure_Category__c.field-meta.xml
<CustomField>
    <fullName>Failure_Category__c</fullName>
    <label>Failure Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A-48</fullName>
                <default>true</default>
                <label>A-48</label>
            </value>
            <value>
                <fullName>B-240</fullName>
            </value>
            <value>
                <fullName>C-No Time Limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>