force-app/main/default/objects/Service_Request__c/fields/Fan_Belt_Condition__c.field-meta.xml
<CustomField>
    <fullName>Fan_Belt_Condition__c</fullName>
    <label>Fan Belt Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>