force-app/main/default/objects/Service_Request__c/fields/Fuel_Sampling__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Sampling__c</fullName>
    <label>Fuel Sampling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>