force-app/main/default/objects/Service_Request__c/fields/Fuel_Visual_Condition__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Visual_Condition__c</fullName>
    <label>Fuel  Visual Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>