force-app/main/default/objects/Service_Request__c/fields/HWT__c.field-meta.xml
<CustomField>
    <fullName>HWT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HWT</label>
    <type>Checkbox</type>
</CustomField>