force-app/main/default/objects/Service_Request__c/fields/Idle_RPM__c.field-meta.xml
<CustomField>
    <fullName>Idle_RPM__c</fullName>
    <label>Idle RPM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>