force-app/main/default/objects/Service_Request__c/fields/InServiceDate__c.field-meta.xml
<CustomField>
    <fullName>InServiceDate__c</fullName>
    <formula>ESN__r.In_service_Date__c</formula>
    <label>In Service Date</label>
    <type>Date</type>
</CustomField>