force-app/main/default/objects/Service_Request__c/fields/Is_Oil_Sampling__c.field-meta.xml
<CustomField>
    <fullName>Is_Oil_Sampling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Oil Sampling</label>
    <type>Checkbox</type>
</CustomField>