force-app/main/default/objects/Service_Request__c/fields/Is_Rework__c.field-meta.xml
<CustomField>
    <fullName>Is_Rework__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rework</label>
    <type>Checkbox</type>
</CustomField>