force-app/main/default/objects/Service_Request__c/fields/Is_Warranty_Claim__c.field-meta.xml
<CustomField>
    <fullName>Is_Warranty_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Warranty Claim</label>
    <type>Checkbox</type>
</CustomField>