force-app/main/default/objects/Service_Request__c/fields/isServiceReqCreatedByEmail__c.field-meta.xml
<CustomField>
    <fullName>isServiceReqCreatedByEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Service Request Created By Email</label>
    <type>Checkbox</type>
</CustomField>