force-app/main/default/objects/Service_Request__c/fields/Issue_Reported__c.field-meta.xml
<CustomField>
    <fullName>Issue_Reported__c</fullName>
    <label>Issue Reported</label>
    <type>TextArea</type>
</CustomField>