force-app/main/default/objects/Service_Request__c/fields/Issues__c.field-meta.xml
<CustomField>
    <fullName>Issues__c</fullName>
    <label>Issues</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Known_Issue__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valve spring failure</fullName>
            </value>
            <value>
                <fullName>Exhaust bellows - Manifold to Manifold 2 ply</fullName>
            </value>
            <value>
                <fullName>Exhaust bellows - Turbo charger outlet to exhaust 2 ply</fullName>
            </value>
            <value>
                <fullName>Coolant pump weep hole seepage</fullName>
            </value>
            <value>
                <fullName>Injector - circlip failure in old version</fullName>
            </value>
            <value>
                <fullName>4016-61TRG - Charge cooler</fullName>
            </value>
            <value>
                <fullName>4016-61TRG Actuator lever</fullName>
            </value>
            <value>
                <fullName>Fan Shroud welding crack</fullName>
            </value>
            <value>
                <fullName>4012/4016 ASOV malfunction</fullName>
            </value>
            <value>
                <fullName>Premature Cylinder head valve recession</fullName>
            </value>
            <value>
                <fullName>Rear oil seal seepage</fullName>
            </value>
            <value>
                <fullName>Front oil seal seepage</fullName>
            </value>
            <value>
                <fullName>Flywheel housing to crankcase – oil seepage</fullName>
            </value>
            <value>
                <fullName>Heater kit need for 4006D CPCBII</fullName>
            </value>
            <value>
                <fullName>Charging Alternator guard failure</fullName>
            </value>
            <value>
                <fullName>Fuel Solenoid relay failure</fullName>
            </value>
            <value>
                <fullName>Fuel Solenoid failure</fullName>
            </value>
            <value>
                <fullName>Alternator Bearing failures in 4006D CPCBII</fullName>
            </value>
            <value>
                <fullName>Belt tensioner pulley bearing failure</fullName>
            </value>
            <value>
                <fullName>Oil Pressure switch malfunction in 4016 TRG</fullName>
            </value>
            <value>
                <fullName>Governor Ball joint crimp loose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>