force-app/main/default/objects/Service_Request__c/fields/killoWatts_kW__c.field-meta.xml
<CustomField>
    <fullName>killoWatts_kW__c</fullName>
    <label>killoWatts(kW)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>