force-app/main/default/objects/Service_Request__c/fields/kiloWatt_hour__c.field-meta.xml
<CustomField>
    <fullName>kiloWatt_hour__c</fullName>
    <label>kiloWatt hour (kWh)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>