force-app/main/default/objects/Service_Request__c/fields/Known_Issue__c.field-meta.xml
<CustomField>
    <fullName>Known_Issue__c</fullName>
    <label>Known Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>New Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>