force-app/main/default/objects/Service_Request__c/fields/Last_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Date__c</fullName>
    <formula>ESN__r.Last_Service_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Service Date</label>
    <type>Date</type>
</CustomField>