force-app/main/default/objects/Service_Request__c/fields/Last_Serviced_By_Engneer__c.field-meta.xml
<CustomField>
    <fullName>Last_Serviced_By_Engneer__c</fullName>
    <formula>ESN__r.Last_Service_By_Engineer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Serviced By</label>
    <type>Text</type>
</CustomField>