force-app/main/default/objects/Service_Request__c/fields/LCL__c.field-meta.xml
<CustomField>
    <fullName>LCL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LCL</label>
    <type>Checkbox</type>
</CustomField>