force-app/main/default/objects/Service_Request__c/fields/Leakages__c.field-meta.xml
<CustomField>
    <fullName>Leakages__c</fullName>
    <label>Leakages-Air, Oil, Fuel, Coolant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>