force-app/main/default/objects/Service_Request__c/fields/Left_for_site__c.field-meta.xml
<CustomField>
    <fullName>Left_for_site__c</fullName>
    <label>Left for site</label>
    <type>DateTime</type>
</CustomField>