force-app/main/default/objects/Service_Request__c/fields/LLOP__c.field-meta.xml
<CustomField>
    <fullName>LLOP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LLOP</label>
    <type>Checkbox</type>
</CustomField>