force-app/main/default/objects/Service_Request__c/fields/Lube_Oil_details__c.field-meta.xml
<CustomField>
    <fullName>Lube_Oil_details__c</fullName>
    <label>Lube Oil Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>