force-app/main/default/objects/Service_Request__c/fields/Lube_Oil_Level__c.field-meta.xml
<CustomField>
    <fullName>Lube_Oil_Level__c</fullName>
    <label>Lube Oil Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>