force-app/main/default/objects/Service_Request__c/fields/New_Issue__c.field-meta.xml
<CustomField>
    <fullName>New_Issue__c</fullName>
    <label>New Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>