force-app/main/default/objects/Service_Request__c/fields/OEM_Name__c.field-meta.xml
<CustomField>
    <fullName>OEM_Name__c</fullName>
    <formula>ESN__r.OEM__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM</label>
    <type>Text</type>
</CustomField>