force-app/main/default/objects/Service_Request__c/fields/Oil_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Oil_Pressure__c</fullName>
    <label>Oil Pressure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>