force-app/main/default/objects/Service_Request__c/fields/Oil_Sampling__c.field-meta.xml
<CustomField>
    <fullName>Oil_Sampling__c</fullName>
    <label>Oil Sampling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>