force-app/main/default/objects/Service_Request__c/fields/On_Change_Status_DateTime__c.field-meta.xml
<CustomField>
    <fullName>On_Change_Status_DateTime__c</fullName>
    <description>Use this field to populate when status will changed from &apos;On Hold&apos;.</description>
    <label>On Change Status DateTime</label>
    <type>DateTime</type>
</CustomField>