force-app/main/default/objects/Service_Request__c/fields/On_Hold_Hours__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>On Hold Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>