force-app/main/default/objects/Service_Request__c/fields/On_Hold_Hours_Minutes__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Hours_Minutes__c</fullName>
    <formula>TEXT(FLOOR(TAT_Remaining__c / 60))
&amp;&apos;hr&apos;&amp; 
TEXT(ROUND(MOD(TAT_Remaining__c ,60), 0))
&amp;&apos;min&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAT Remaining</label>
    <type>Text</type>
</CustomField>