force-app/main/default/objects/Service_Request__c/fields/Parent_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>