force-app/main/default/objects/Service_Request__c/fields/Part_Invoice_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Part_Invoice_Submitted_Date__c</fullName>
    <label>Part Invoice Submitted Date</label>
    <type>Date</type>
</CustomField>