force-app/main/default/objects/Service_Request__c/fields/Part_Request_Count_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Request_Count_Number__c</fullName>
    <label>Part Request Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>