force-app/main/default/objects/Service_Request__c/fields/Payment_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Receive_Date__c</fullName>
    <label>Payment Receive Date</label>
    <type>Date</type>
</CustomField>