force-app/main/default/objects/Service_Request__c/fields/Pending_Payments__c.field-meta.xml
<CustomField>
    <fullName>Pending_Payments__c</fullName>
    <label>Pending Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>