force-app/main/default/objects/Service_Request__c/fields/Pending_Payments_Remark__c.field-meta.xml
<CustomField>
    <fullName>Pending_Payments_Remark__c</fullName>
    <label>Pending Payments Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>