force-app/main/default/objects/Service_Request__c/fields/Primary_Engineer_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Primary_Engineer_Check_Out__c</fullName>
    <label>Primary Engineer Check Out</label>
    <type>DateTime</type>
</CustomField>