force-app/main/default/objects/Service_Request__c/fields/Query_from_Customer__c.field-meta.xml
<CustomField>
    <fullName>Query_from_Customer__c</fullName>
    <inlineHelpText>This field should mandatorily be populated with the Date &amp; Time at which Customer contacted you via EMail or Phone call.</inlineHelpText>
    <label>Query from Customer</label>
    <type>DateTime</type>
</CustomField>