force-app/main/default/objects/Service_Request__c/fields/Radiator_Cleanliness__c.field-meta.xml
<CustomField>
    <fullName>Radiator_Cleanliness__c</fullName>
    <label>Radiator Cleanliness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>