force-app/main/default/objects/Service_Request__c/fields/Radiator_Hoses_Condition__c.field-meta.xml
<CustomField>
    <fullName>Radiator_Hoses_Condition__c</fullName>
    <label>Radiator Hoses Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>