force-app/main/default/objects/Service_Request__c/fields/Rated_RPM__c.field-meta.xml
<CustomField>
    <fullName>Rated_RPM__c</fullName>
    <label>Rated RPM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>