force-app/main/default/objects/Service_Request__c/fields/Reasons_for_shifting_the_category__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_shifting_the_category__c</fullName>
    <inlineHelpText>Please mention the previous category as well</inlineHelpText>
    <label>Reasons for shifting the category</label>
    <type>TextArea</type>
</CustomField>