force-app/main/default/objects/Service_Request__c/fields/Repair_Testing__c.field-meta.xml
<CustomField>
    <fullName>Repair_Testing__c</fullName>
    <label>Repair &amp; Testing</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>