force-app/main/default/objects/Service_Request__c/fields/Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time__c</fullName>
    <formula>( (Primary_Engineer_Check_Out__c -  Visit_ReportedTime__c) + ( Visit_ReportedTime__c -  Date_Time_Reported__c )  )*24*60</formula>
    <label>Time Elapsed / Resolution Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>