force-app/main/default/objects/Service_Request__c/fields/Resolution_Time_Based_On_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time_Based_On_Check_Out__c</fullName>
    <label>Resolution Time Based On Check Out</label>
    <type>DateTime</type>
</CustomField>