force-app/main/default/objects/Service_Request__c/fields/Resolution_Time_Based_On_Check_Out_Formu__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time_Based_On_Check_Out_Formu__c</fullName>
    <formula>TEXT(FLOOR( Resolution_Time_Based_OnCheck_Out__c / 60))
&amp;&apos;hr&apos;&amp;
TEXT(ROUND(MOD(Resolution_Time_Based_OnCheck_Out__c ,60), 0))
&amp;&apos;min&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolution Time Based On Check Out</label>
    <type>Text</type>
</CustomField>