force-app/main/default/objects/Service_Request__c/fields/Resolution_Time_Based_OnCheck_Out__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time_Based_OnCheck_Out__c</fullName>
    <formula>((  Closed_Date_Time__c - CreatedDate ))*24*60</formula>
    <label>Resolution Time Based On Check Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>