force-app/main/default/objects/Service_Request__c/fields/Response_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Text__c</fullName>
    <formula>TEXT(FLOOR( Response_Time__c  / 60))
&amp;&apos;hr&apos;&amp;
TEXT(ROUND(MOD( Response_Time__c  ,60), 0))
&amp;&apos;min&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time</label>
    <type>Text</type>
</CustomField>