force-app/main/default/objects/Service_Request__c/fields/Send_Email_to_Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_to_Service_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will use in workflow to send an email to service manager.</description>
    <label>Send Email to Service Manager</label>
    <type>Checkbox</type>
</CustomField>